Bug 123400 - FILESAVE DOCX Data Label Separator is changing to Semicolon after exported
Summary: FILESAVE DOCX Data Label Separator is changing to Semicolon after exported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.3.0 target:6.2.2
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-02-12 10:30 UTC by NISZ LibreOffice Team
Modified: 2019-02-18 10:51 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Writer. (180.35 KB, image/png)
2019-02-12 10:31 UTC, NISZ LibreOffice Team
Details
Example file from Writer. (ODT) (14.12 KB, application/vnd.oasis.opendocument.text)
2019-02-12 10:32 UTC, NISZ LibreOffice Team
Details
Example file from Writer. (DOCX) (14.90 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-02-12 10:32 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-02-12 10:30:37 UTC
Description:
Data Label Separator is changing to Semicolon when the document is saved in DOCX format.

Steps to Reproduce:
    1. Create a new document in LibreOffice Writer.
    2. Insert a chart.
    3. Choose Insert -> Data Labels (Charts).
    4. Select Show value as number.
    5. Select Show category.
    6. Select Separator: Space, Comma or New line.
    7. Press OK button.
    8. Save the file as DOCX.
    9. Reload the file.

Actual Results:
Data Label Separator is Semicolon.

Expected Results:
Data Label shouldn’t change.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.3.0.0.alpha0+
Build ID: 950bdd703bb4430526598a132897a6b77cb21005
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded


Reproduciable with:
Verzió: 4.4.0.3
Build az.: de093506bcdc5fafd9023ee680b8c60e3e0645d7
Területi beállítások: hu_HU
Comment 1 NISZ LibreOffice Team 2019-02-12 10:31:33 UTC
Created attachment 149215 [details]
Screenshot of the problem in Writer.
Comment 2 NISZ LibreOffice Team 2019-02-12 10:32:04 UTC
Created attachment 149216 [details]
Example file from Writer. (ODT)
Comment 3 NISZ LibreOffice Team 2019-02-12 10:32:26 UTC
Created attachment 149217 [details]
Example file from Writer. (DOCX)
Comment 4 Balázs Varga 2019-02-12 10:42:52 UTC
Confirmed!

Version: 6.3.0.0.alpha0+
Build ID: 369bbc407b283c3df919c7f9ec7525491422e71f
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

and

Version: 6.1.0.3
Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: hu-HU (hu_HU); Calc: CL
Comment 5 Commit Notification 2019-02-13 09:07:37 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e32e5e61b509dcae0462419acfc556d445895840%5E%21

tdf#123400 OOXML Chart: Export Data Label Separator

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-02-16 09:49:29 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/f394d911c00d96537841873d1ba20be9df58f5fd%5E%21

tdf#123400 OOXML Chart: Export Data Label Separator

It will be available in 6.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.