tdf#123400 OOXML Chart: Export Data Label Separator

Export the data label separator XML tag and
the separated character to OOXML.

Change-Id: I9b3bcb588e42a42494107ebde70f4a72492cfac4
Reviewed-on: https://gerrit.libreoffice.org/67753
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>